/*
 * Protocol specification for OpenCL fuzztesting results.
 */
syntax = "proto2";
package dsmith;


// A single result.
message Result {
    optional Testbed testbed = 1;
    optional TestCase testcase = 2;
    optional int64 date = 3;
    optional float runtime = 4;
    optional int32 returncode = 5;
    optional string stdout = 6;
    optional string stderr = 7;

    message Testbed {
        optional Platform platform = 1;
        optional bool cl_opt = 2;

        message Platform {
            optional string cl_platform = 1;
            optional string cl_device = 2;
            optional string cl_driver = 3;
            optional string cl_devtype = 4;
            optional string cl_version = 6;
            optional string host_os = 5;
        }
    }

    message TestCase {
        optional Program program = 1;
        optional Params params = 2;
        optional int32 inputs = 3;
        optional uint32 timeout = 4;

        message Program {
            optional string src = 1;
            optional float generation_time = 2;
        }

        message Params {
            optional int32 gsize_x = 1;
            optional int32 gsize_y = 2;
            optional int32 gsize_z = 3;
            optional int32 lsize_x = 4;
            optional int32 lsize_y = 5;
            optional int32 lsize_z = 6;
        }
    }
}


// Concatenated array of results.
message Results {
    repeated Result results = 1;
}
